# email-triage-automation

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: classification.json  drafts.json  run.py
examples/: imap_poller.py  walkthrough.md
fixtures/: 01-sales-lead.eml  02-support-request.eml  03-billing-question.eml  04-feature-request.eml  05-newsletter.eml  06-internal.eml  07-ambiguous.eml
prompts/: feature_request.txt  sales_lead.txt  support_request.txt
src/email_triage/: __init__.py  catalog.py  classifier.py  cli.py  drafter.py  parser.py
tests/: test_classifier.py  test_drafter.py  test_parser.py
